--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,8 @@ en:
   signup_now: "Sign up now!"
   login: "Log in"
   logout: "Log out"
+  edit_user: "Edit user"
+  all_users: "All Users"
   flash_success: "Welcome to the Sample App!"
   flash_fail: "User not found!"
   flash_invalid: "Invalid email/password combination"
@@ -22,9 +24,24 @@ en:
   password: "Password"
   confirmation: "Confirmation"
   submit_signup: "Create my account"
+  submit_change: "Submit change"
   account: "Account"
   new_user: "New User"
   welcome: "Welcome to the Sample App"
   intro_head: "This is the home page for the"
   intro_foot: "sample application"
   remember_me: "Remember me on this computer?"
+  h1_update_profile: "Update your profile"
+  change: "Change"
+  flash_update_success: "Profile updated!"
+  flash_not_login: "Please log in!"
+  flash_delete_success: "User deleted!"
+  flash_delete_fail: "Cannot delete!"
+  confirm: "You sure?"
+  views:
+    pagination:
+      first: "&laquo; First"
+      last: "Last &raquo;"
+      previous: "&lsaquo; Prev"
+      next: "Next &rsaquo;"
+      truncate: "&hellip;"
