--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -9,6 +9,8 @@ vi:
   signup_now: "Đăng ký ngay!"
   login: "Đăng nhập"
   logout: "Đăng xuất"
+  all_users: "Tất cả người dùng"
+  edit_user: "Edit user"
   news: "Tin tức"
   flash_success: "Chào mừng bạn!"
   flash_fail: "Không tìm thấy ngưòi dùng!"
@@ -22,9 +24,24 @@ vi:
   password: "Mật khẩu"
   confirmation: "Xác nhận mật khẩu"
   submit_signup: "Tạo tài khoản"
+  submit_change: "Lưu thay đổi"
   account: "Tài khoản"
   new_user: "Người dùng mới"
   welcome: "Chào mừng đến với Ưng dụng Mẫu"
   intro_head: "Đây là ứng dụng mẫu của"
   intro_foot: ""
   remember_me: "Lưu người dùng trên máy này?"
+  h1_update_profile: "Cập nhật hồ sơ của bạn"
+  change: "Thay đổi"
+  flash_update_success: "Hồ sơ đã đưọc cập nhật!"
+  flash_not_login: "Bạn chưa đăng nhập!"
+  flash_delete_success: "Người dùng đã được xóa!"
+  flash_delete_fail: "Không thể xóa!"
+  confirm: "Bạn chắc chứ?"
+  views:
+    pagination:
+      first: "&laquo; Đầu"
+      last: "Cuối &raquo;"
+      previous: "&lsaquo; Trước"
+      next: "Sau &rsaquo;"
+      truncate: "&hellip;"
